--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,5 @@
-<p><small>Powered by <a href="https://jekyllrb.com/">Jekyll</a> &mdash; Theme by <a href="https://www.bodunhu.com/">BDHU</a></small></p>
+<p>
+  <small>Created by &mdash; Kierke* </small>
+  <br/>
+  <div class='tiny'>*No association with d.gg or the daliban</div>
+</p>
