--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,5 +13,6 @@
       {%- for platform in site.sidebar %}
       <li><a href="{{ platform.link }}"><i class="{{ platform.icon }}"></i> {{ platform.name }}</a></li>
       {%- endfor %}
+      <li><a href="/about"><i class="fa fa-question-circle"></i> Site FAQ</a></li>
     </ul>
   </div>
