--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <header>
             <img class="img-circle" src="https://cdn.betterttv.net/emote/5e9fa2517e090362f8b0f8d9/3x" alt="Logo"/>
 
-            <h1><a href="{{ "/" | absolute_url }}"><i class='fa fa-home'></i>&nbsp;{{ site.title | default: site.github.repository_name }}</a></h1>
+            <h1><a href="{{ "/" }}"><i class='fa fa-home'></i>&nbsp;{{ site.title | default: site.github.repository_name }}</a></h1>
 
           {% if site.email %}
             <p class="addr"><i class="fa-regular fa-envelope"></i>&nbsp;{{ site.email }}</p>
