--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -10,6 +10,34 @@ body {
   font-weight:400;
 }
 
+.dataTables_wrapper {
+  background-color: #dcdcdc;
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.dataTables_filter {
+  input {
+    background-color: ghostwhite !important;
+    margin: 5px;
+  }
+}
+
+tr {
+  background-color: #2b2b2b !important;
+}
+
+tbody {
+  tr {
+    td.sorting_1 {
+      background-color: #333 !important;
+    }
+    td {
+      color: #dcdcdc;
+    }
+  }
+}
+
 h1, h2, h3, h4, h5, h6 {
   color: var(--clr-h1-and-bold);
   margin:0 0 20px;
