--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
       <div class="sidebar">
         <header>
             <img class="img-circle" src="https://cdn.betterttv.net/emote/5e9fa2517e090362f8b0f8d9/3x" alt="Logo"/>
+            <img class="img-circle" rel="prefetch" src="/assets/img/Animation.gif" alt="Logo2"/>
 
             <h1><a href="{{ "/" }}"><i class='fa fa-home'></i>&nbsp;{{ site.title | default: site.github.repository_name }}</a></h1>
 
