--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -11,7 +11,8 @@ $(document).ready( function () {
       {
         "pageLength": 25,
         "fixedHeader": true,
-        "order": [[3, 'asc']]
+        "order": [[3, 'asc']],
+        "language": { "search": '', "searchPlaceholder": "Search..." },
       }
     );
 } );
