Made title better

--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -72,6 +72,11 @@ a {
   text-decoration:none;
 }
 
+.title-letters {
+  color:var(--clr-a-text);
+  text-decoration:none;
+}
+
 a:hover, a:focus {
   color: var(--clr-a-text-hvr);
 }
