--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
       <div class="sidebar">
         <header>
 
-          <h1><a href="{{ "/" }}"><i class='fa fa-home'></i>&nbsp;DG.GG</a></h1>
+          <h1><text class="title-letters">D</text>ifferent<br><text class="title-letters">G</text>ame<br><text class="title-letters">.GG</text></h1>
           <img class="img-circle" src="https://cdn.betterttv.net/emote/5e9fa2517e090362f8b0f8d9/3x" alt="Logo"/>
           <img class="img-circle" rel="prefetch" src="/assets/img/Animation.gif" alt="Logo2"/>
 
