--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,13 +57,14 @@
       <section>
         <nav>
           <ul>
-            <li><a href="/"><i class="fab fa-d-and-d"></i>&nbsp;Home</a></li>
+            <li><a href="/"><i class="fas fa-home"></i>&nbsp;Home</a></li>
             <li><a href="/dodges"><i class="fab fa-accessible-icon"></i>&nbsp;Dodges</a></li>
             <li><a href="/loser"><i class="fas fa-people-carry"></i>&nbsp;Duo Stats</a></li>
             <li><a href="/ganks"><i class="fas fa-skull"></i>&nbsp;Ganks</a></li>
             <li style="float:right"><a href="/about" class="active"><i class="fas fa-info-circle"></i>&nbsp;About</a></li>
           </ul>
         </nav>
+        {%- include menu-mobile.html %}
         <div>{{ content }}</div>
         <footer class='main-footer'>
           Required disclaimer: DG.GG isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing Riot Games properties. Riot Games, and all associated properties are trademarks or registered trademarks of Riot Games, Inc.
