--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,6 @@
       <li><a href="{{ platform.link }}"><i class="{{ platform.icon }}"></i> {{ platform.name }}</a></li>
       {%- endfor %}
       <li><a href="/about"><i class="fa fa-question-circle"></i> Site FAQ</a></li>
-      <li><a href="https://www.patreon.com/dggg"><i class="fa-brands fa-patreon"></i> Support (lol)</a></li>
+      <li><a href="https://www.patreon.com/dggg"><i class="fa-brands fa-patreon"></i> Support New Features</a></li>
     </ul>
   </div>
