--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,10 @@
             <li style="float:right"><a href="/about" class="active"><i class="fas fa-info-circle"></i>&nbsp;About</a></li>
           </ul>
         </nav>
+        <h2>Check out the new dg.gg theme song by King_of_Suede!&nbsp;</h2>
+        <audio controls src="/assets/audio/preciouselo2.wav">
+          Your browser does not support the audio element.
+        </audio><br/>
         {%- include menu-mobile.html %}
         <div>{{ content }}</div>
         <footer class='main-footer'>
